# console-ai-chat

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/workflows/: security.yml
src/ai_chat_console/: __init__.py  cli.py  config.py
src/ai_chat_console/core/: chat.py  conversation.py  session.py
src/ai_chat_console/mcp/: manager.py  tool.py
src/ai_chat_console/providers/: anthropic.py  base.py  factory.py  openai.py  openrouter.py
src/ai_chat_console/tools/: __init__.py  base.py  executor.py  registry.py
src/ai_chat_console/tools/builtin/: __init__.py  calculator.py  datetime_tool.py
src/ai_chat_console/ui/: console.py
